--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/index.ts",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "lint": "eslint . --fix --ext .ts",
     "prettier": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js)\" --write",
     "postinstall": "husky install"
@@ -34,6 +34,7 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
