chore(package): migrate from yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "lint-staged": {
     "./src/**/*.{ts,js}": [
-      "yarn lint",
-      "yarn prettier"
+      "pnpm lint",
+      "pnpm prettier"
     ]
   },
   "devDependencies": {
